# integracao_banco_csv

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yaml
docs/: index.md  test.md
output/: Customers.csv
schemas/: customer.py
src/: conexao_db.py  customer.py
tests/: test_transform_func.py
