[tool.poetry]
name = "integracao-banco-csv"
version = "0.1.0"
description = ""
authors = ["Douglas Poso <douglas.poso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pandera = {extras = ["io"], version = "^0.19.3"}
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
pymssql = "^2.3.0"
numpy = "1.26.4"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.5"
pygments = "^2.18.0"
mkdocs-material = "^9.5.28"
pymdown-extensions = "^10.8.1"
mkdocs-bootstrap386 = "^0.0.2"
mkdocs-jupyter = "^0.24.8"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
